--- a/config.json
+++ b/config.json
@@ -1,1 +1,11 @@
-{"lastversion":6,"package":"com.easyapps.zkplayerpro","banners":["R-M-1762921-1"],"mejs":["R-M-1762921-2"],"ads":"y"}
+{
+  "lastversion": 6,
+  "package": "com.easyapps.zkplayerpro",
+  "banners": [
+    "R-M-1762921-1"
+  ],
+  "mejs": [
+    "R-M-1762921-2"
+  ],
+  "ads": "y"
+}
